Blue-Green-Deployment/Blue-Service-for-testing.yml
# Blue Service (for testing)
apiVersion: v1
kind: Service
metadata:
  name: myapp-blue-service
  namespace: blue-green-demo
  labels:
    app: myapp
    version: blue
spec:
  type: ClusterIP
  selector:
    app: myapp
    version: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
